# newmovie

./: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  movies.thrift
cmake/: FindLibevent.cmake  Findthrift.cmake
config/: service-config.json
gen-cpp/: MovieInfoService.cpp  MovieInfoService.h  MovieInfoService_server.skeleton.cpp  RecommenderService.cpp  RecommenderService.h  RecommenderService_server.skeleton.cpp  UserLikesService.cpp  UserLikesService.h  UserLikesService_server.skeleton.cpp  movies_types.cpp  movies_types.h
gen-lua/: movies_MovieInfoService.lua  movies_RecommenderService.lua  movies_UserLikesService.lua  movies_ttypes.lua
nginx_reverse_proxy/conf/: nginx.conf
nginx_reverse_proxy/lua-scripts/api/movie_service/: movies.lua
nginx_reverse_proxy/lua-scripts/api/recommender_service/: get.lua
script/: get_recommendations.sh
src/: CMakeLists.txt  ClientPool.h  GenericClient.h  ThriftClient.h  logger.h  utils.h
src/MovieInfoService/: CMakeLists.txt  MovieInfoHandler.h  MovieInfoService.cpp
